--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -5,7 +5,7 @@ The wiki page list can be found [http://code.google.com/p/dingoo-sdk/wiki here].
 
 = Introduction =
 
-Dingoo_SDK is meant to serve as a multi-platform SDK for the [http://en.wikipedia.org/wiki/Dingoo Dingoo] A320's native operating system which is a variant of [http://en.wikipedia.org/wiki/MicroC/OS-II µC/OS-II] (uCOS II).
+Dingoo_SDK is meant to serve as a multi-platform SDK for the [http://en.wikipedia.org/wiki/Dingoo Dingoo] A320's native operating system which is a variant of [http://en.wikipedia.org/wiki/MicroC/OS-II µC/OS-II] (uCOS II). The SDK can also be used  to build for [http://boards.dingoonity.org/dingoo-development/how-to-make-a-gemei-x760-version-of-your-game/ Gemei X760+] too.
 
 For a list of games and applications built using some variant of the SDK, see the [DevelopedApplications] wiki page.
 
