Edited wiki page DingooSDL through web user interface.

--- a/wiki/DingooSDL.wiki
+++ b/wiki/DingooSDL.wiki
@@ -23,3 +23,20 @@ Native Dingo SDL key/button bindings are the same as the Dingux SDL bindings, vi
 Images in table from http://dingoowiki.com/index.php?title=Editing:Guidelines#Controls_section
 
 See [http://code.google.com/p/pirate-dev/downloads/detail?name=keyCodes.zip keyCodes.zip] from http://code.google.com/p/pirate-dev/downloads/list for key identification.
+
+Sample C switch
+{{{
+    case  SDLK_UP:  /* Dingoo  D-pad up */
+    case  SDLK_DOWN:  /* Dingoo  D-pad down */
+    case  SDLK_LEFT:  /* Dingoo  D-pad left */
+    case  SDLK_RIGHT:  /* Dingoo  D-pad right */
+    case  SDLK_LCTRL:  /* Dingoo  A button */
+    case  SDLK_LALT:  /* Dingoo  B button */
+    case  SDLK_SPACE:  /* Dingoo  X button */
+    case  SDLK_LSHIFT:  /* Dingoo  Y button */
+    case  SDLK_RETURN:  /* Dingoo  START button */
+    case  SDLK_ESCAPE:  /* Dingoo  SELECT button */
+    case  SDLK_TAB:  /* Dingoo  Left shoulder */
+    case  SDLK_BACKSPACE:  /* Dingoo  Right shoulder */
+    case  SDLK_PAUSE:  /* Dingoo  POWER UP button */
+}}}
